# projet-master

./: .env  .gitignore  .gitlab-ci.yml  README.md  dernier_fichier  deuxieme_fichier  test_ajout_fichier
bdd-mongo/: Dockerfile-Agg  README.md  add-data.sh  aggregate-data.sh  cf-primary  fill-db.py  rs-init.sh  setup.sh  start.sh  stop.sh
bdd-mongo/copy-script/: Dockerfile  add_to_cf  copy-into-db.py  start_python.service  start_python.sh
capteurs/: .gitignore  CMakeLists.txt  Conf.md  README.md  build.sh  dockerfile  gen_file.py
capteurs/Conf/: README.md
capteurs/Conf/Gateway/: README.md
capteurs/Conf/Noeuds/: README.md  start-batman-adv.sh  wlan0
capteurs/Configuration/Meshnetwork/: README.md
capteurs/configuration/: argumentsMesures.txt  identifiantsSFTP.txt  params.txt
capteurs/inc/: baseDeDonnees.hpp  infosChamp.hpp  main.h  mesures.hpp
capteurs/inc/agregateur/: agregateurBdd.h  envoiDonnees.hpp
capteurs/inc/commun/: baseDeDonnees.hpp  envoiDonnees.hpp  erreur.hpp  stockageDonnees.hpp
capteurs/inc/mesures/: infosChamp.hpp  mesures.hpp  recupMesures.h
capteurs/src/: CMakeLists.txt  baseDeDonnees.cpp  main.cpp
capteurs/src/agregateur/: envoiDonnees.cpp  main.cpp
capteurs/src/commun/: baseDeDonnees.cpp  envoiDonnees.cpp  stockageDonnees.cpp
capteurs/src/mesures/: lux.py  main.cpp  mesures.cpp  test_catpeur_lux.py
doc/: ip_nets.md  ports.md
documents/drive/: Diagramme de Gantt.xlsx  Feuille de temps.xlsx  Liens.docx  Liste TODO.docx  support soutenance.pptx
documents/planning/: Online Gantt 20240102.gantt  README.md  gantt-21-12-23.gantt  gantt-source.gantt
f/: exemple.txt
infra/: Dockerfile-Mongo  Dockerfile-Web
infra/configs/: config.yml  interfaces
infra/consul-nomad/: c1.hcl  c2.hcl  n1.hcl  n2.hcl
infra/iaas/: add_hook.txt  cloud-config  cloud-config-lb  cloud-config-sftp  cloud-config-web  docker-compose.yml  hostname.php  nginx.conf  pull.sh  script_services_mongod.sh  test_bdd.php  webhook.service
infra/orchestrateur/: README.md
infra/redirect/: Dockerfile-Nginx  default.conf
infra/units/: nebula.service
monitoring/: dashboard.json  docker-compose.yml  readme.md  server.yml
monitoring/bdd/: base.sql
monitoring/client/: cloud-config.yml  node_exporter.service
monitoring/old/: cloud-config.yml  docker-compose.yml  generate-data.py  readme.md
monitoring/script/: generate-data.py
monitoring/server/: cloud-config.yml  discover.sh  grafana.service  prometheus.service  prometheus.yml  promotheus.yml
sftp/: Dockerfile  README.md  insert.py  start.sh
sftp/upload/: exemple.txt
site/: .gitignore  README.md  alsagriculture.webmanifest  compte.html  connexion.html  connexionCmpt.html  connexionCmpt.php  creationCmpt.html  creationCmpt.php  dockerfile  encore_un_test  erreur404.html  gestionCmpt.html  gestionCmpt.php  index.html  index.php  php.ini  politiqueConf.php  run-site.sh
site-comm/: .gitignore  Dockerfile-Com  README.md  index.html  index.php
site-comm/assets/: tradDe.php  tradEn.php  tradFr.php
site/assets/: head.php  (+5 more)
systeme/: Conf.md  Installation.sh  InstallationVPN.sh  OpenVPN.md  README.md  ResumeCLI.md  Security.md  VPN.md  rclocalwrite.py
(+172 files in other folders)
